Add UUID ingest validation, CI e2e gate, startup retries, and build optimizations

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ POSTGRES_MAX_POOL=20
 KAFKA_BOOTSTRAP_SERVERS=redpanda:9092
 SCHEMA_REGISTRY_URL=http://redpanda:8081
 KAFKA_CLIENT_ID=polyphony-ledger
+KAFKA_STARTUP_TIMEOUT_SECONDS=90
+PRODUCER_MAX_RETRIES=6
+PRODUCER_RETRY_BASE_MS=200
 
 TX_RAW_TOPIC=tx_raw
 TX_VALIDATED_TOPIC=tx_validated
