--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -258,6 +258,8 @@ services:
       NEXT_PUBLIC_API_BASE: http://localhost:8000
       NEXT_PUBLIC_WS_URL: ws://localhost:8000/ws/stream
       NEXT_PUBLIC_JAEGER_URL: http://localhost:16686
+      NEXT_PUBLIC_FE_TELEMETRY_ENABLED: 'true'
+      NEXT_PUBLIC_FE_TELEMETRY_SAMPLE_RATE: '1'
     ports:
       - '3000:3000'
 
@@ -280,6 +282,7 @@ services:
     volumes:
       - ./infra/grafana/datasources.yml:/etc/grafana/provisioning/datasources/datasources.yml:ro
       - ./infra/grafana/provisioning/dashboards.yml:/etc/grafana/provisioning/dashboards/dashboards.yml:ro
+      - ./infra/grafana/provisioning/alerting:/etc/grafana/provisioning/alerting:ro
       - ./infra/grafana/dashboards:/var/lib/grafana/dashboards:ro
     ports:
       - '3001:3000'
