Add bilingual sales site, governance controls, and production planning docs

--- a/.env.example
+++ b/.env.example
@@ -40,3 +40,6 @@ OTEL_EXPORTER_ENDPOINT=http://otel-collector:4317
 TRAFFIC_GENERATOR_ENABLED=false
 TRAFFIC_GENERATOR_RATE_PER_SEC=2
 ALLOWED_ASSETS=BTC,ETH,USDT
+AUTH_MODE=off
+DEFAULT_WORKSPACE_ROLE=owner
+DEFAULT_WORKSPACE_MONTHLY_TX_QUOTA=1000000
