--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -149,6 +149,9 @@ services:
       OTEL_EXPORTER_ENDPOINT: http://otel-collector:4317
       TRAFFIC_GENERATOR_ENABLED: 'false'
       ALLOWED_ASSETS: BTC,ETH,USDT
+      AUTH_MODE: 'off'
+      DEFAULT_WORKSPACE_ROLE: owner
+      DEFAULT_WORKSPACE_MONTHLY_TX_QUOTA: '1000000'
     ports:
       - '8000:8000'
     command: ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
