Add prod OIDC proxy stack and worker autoscaling signals

--- a/.env.example
+++ b/.env.example
@@ -43,3 +43,12 @@ ALLOWED_ASSETS=BTC,ETH,USDT
 AUTH_MODE=off
 DEFAULT_WORKSPACE_ROLE=owner
 DEFAULT_WORKSPACE_MONTHLY_TX_QUOTA=1000000
+OIDC_ISSUER_URL=
+OIDC_AUDIENCE=
+OIDC_JWKS_URL=
+OIDC_ROLE_CLAIM=realm_access.roles
+OIDC_WORKSPACE_CLAIM=workspace_id
+OIDC_SUBJECT_CLAIM=sub
+OIDC_ALGORITHMS=RS256,ES256
+AUTOSCALE_TARGET_LAG=200
+AUTOSCALE_TARGET_THROUGHPUT_PER_MINUTE=120
