--- a/.github/workflows/ci-e2e.yml
+++ b/.github/workflows/ci-e2e.yml
@@ -1,4 +1,4 @@
-name: CI E2E Gate
+name: E2E Hard Gate
 
 on:
   push:
@@ -8,7 +8,8 @@ on:
   workflow_dispatch:
 
 jobs:
-  smoke-and-e2e:
+  e2e-pipeline-gate:
+    name: e2e-pipeline-gate
     runs-on: ubuntu-latest
     timeout-minutes: 40
 
@@ -25,7 +26,7 @@ jobs:
       - name: Smoke checks
         run: python3 scripts/smoke_check.py
 
-      - name: E2E pipeline checks
+      - name: E2E pipeline hard gate
         run: python3 scripts/e2e_pipeline_check.py
 
       - name: Dump compose logs on failure
